[project]
name = "ci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Pin to fbuild 2.2.17 — routes ESP32-S3 native deploys through esptool
    # (FastLED/fbuild#380), which is one of the user-visible failure modes
    # tracked in FastLED #2700 (fbuild ESP toolchain resolution). The
    # remaining end-to-end RISC-V helper toolchain provisioning work is
    # tracked separately upstream as a follow-up to 2.2.17.
    # Prior pins preserved for context: 2.2.15 added Arduino UNO Q / STM32U5
    # board defaults and the compile-many stage-2 framework-archive share
    # (FastLED/fbuild#337) which prevents every stage-2 sketch from
    # re-building the framework from scratch (the regression that originally
    # forced the FASTLED_USE_FBUILD_CI=1 gate to default-off in #2662). Also
    # picked up the stage-2 jobs split (#336), the real-toolchain stage-2
    # perf regression test (#342), the daemon-side fmt-tracing-to-stderr
    # fix (#348), the bounded zccache start-up timeout (#349), and
    # project-lock acquire instrumentation (#350) — together these address
    # the silent esp32c6 hang reported in fbuild#346 and unblock flipping
    # FASTLED_USE_FBUILD_CI=1 default-on in a follow-up. Also preserves
    # quoted Adafruit nRF52 BSP defines in response files, unblocking
    # nRF52840 builds under fbuild. 2.2.16 completed ESP32-C2 framework
    # skeleton installs and patched the missing touch_sensor_legacy_types.h
    # no-touch compatibility header (FastLED/fbuild#378).
    "fbuild==2.2.17",
    "platformio>=6.1.19,<6.2",
    "python-dateutil",
    "ruff",
    "pyright>=1.1.373",
    "types-python-dateutil",
    "clang-format",
    "pip",
    "pytest",
    "pytest-xdist",
    "fpvgcc",
    "uv",
    "clang-tool-chain>=1.5.5",
    # 1.11.14 ships the `--no-walk` flag plus an expanded skip-list for
    # the meson-configure wrapper (zackees/zccache#660, closes zackees/
    # zccache#659). With `--no-walk` the wrapper skips its recursive
    # meson.build discovery walk entirely and trusts the caller's
    # `--input-file` entries instead. FastLED enumerates its 7 known
    # meson.build files explicitly, eliminating the ~5s `.venv/`
    # traversal (~100k Python files) on every cold-with-cache
    # reconfigure. 1.11.13 shipped the `--input-file` flag
    # (zackees/zccache#655, closes zackees/zccache#654). FastLED
    # passes a sidecar digest of its test/example/source globs into the
    # wrapper's cache key so the reconfigure path benefits from cache
    # restoration — previously the wrapper had to be bypassed whenever
    # FastLED's metadata-cache layer flagged a change, because the
    # wrapper hashed only meson.build files and a hit would have served
    # a stale-target tree. 1.11.12 added the wrapper itself
    # (zackees/zccache#649, closes zackees/zccache#627). 1.11.11 ships
    # the depfile-on-cache-hit fix (zackees/zccache#643) — without that,
    # `deps = gcc` mode records `#deps 0` for every cached object and
    # incremental builds produce stale .obj files after a git pull that
    # changes transitive headers (symptom: `undefined symbol: ...` link
    # errors hours after a header actually changed).
    "zccache>=1.11.14",
    "ninja",
    "meson>=1.11.0",
    "download",
    "playwright",
    "httpx",
    "psutil",
    "toml>=0.10.2",
    "typeguard>=4.4.4",
    "mcp>=1.12.2",
    "compiledb>=0.10.7",
    "pathspec>=0.12.1",
    "rich>=14.1.0",
    "textual>=1.0.0",
    "emoji>=2.14.1",
    "pydantic[email]>=2.0.0",
    "dirsync>=2.2.6",
    "esptool>=5.0.2",
    "docker>=7.0.0",
    "pillow>=11.3.0",
    "ffmpeg-python>=0.2.0",
    "static-ffmpeg>=2.7",
    "fastled>=2.0.9",
    "running-process>=4.0.0",
    "nodejs-wheel>=22.0.0",
    "daemoniker>=0.2.3",
    "colorama>=0.4.6",
    "ty>=0.0.15",
    "bleak>=0.22.3",
]

[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]

[tool.hatch.build]
packages = ["ci"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
exclude = ["ci/tmp", "ci/wasm", "scripts", "native", "**/.fbuild", "**/.pio"]

[tool.ruff.lint]
# Enable import sorting (replaces isort)
# Enable PEP 585 annotations and PEP 604 unions (modern type hints)
select = [
    "I",      # isort - import sorting
    "UP006",  # Use PEP 585 annotation (list[T] instead of List[T])
    "UP007",  # Use PEP 604 union syntax (X | Y instead of Union[X, Y], T | None instead of Optional[T])
]
# Register custom checker codes so ruff accepts # noqa: DCT001 etc.
# KBI001/002/003 are emitted by ci/lint_python/keyboard_interrupt_checker.py.
external = ["DCT001", "DCT002", "KBI001", "KBI002", "KBI003"]

[tool.ruff.lint.isort]
# Configure import sorting to match isort's black profile
force-single-line = false
force-sort-within-sections = false
lines-after-imports = 2

[tool.ruff.format]
# Enable formatting (replaces black)
# Use black-compatible settings
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.isort]
# Configure isort to use black-compatible formatting
profile = "black"
skip_glob = ["ci/tmp/*", "ci/wasm/*", "scripts/*", "native/*", "**/.fbuild/*", "**/.pio/*"]

[tool.pyright]
include = ["ci", "ci/compiler"]
exclude = [
    "ci/tmp/",
    "ci/wasm/",
    "ci/native/",
    "native/",
    "**/__pycache__",
    "**/.pytest_cache",
    "**/.ruff_cache",
    "**/node_modules",
    "**/.git",
    "**/.venv",
    "**/.build",
    "**/.pio",
    "**/.pio_cache",
    "**/build",
    "**/dist",
    "**/*.egg-info",
    "tmp.py",
    "ci/compiler/packages.py",
    "ci/tests/**",
    "ci/util/test_*.py",
]

# Type checking configuration
typeCheckingMode = "strict"
pythonVersion = "3.11"
pythonPlatform = "All"
useLibraryCodeForTypes = true
analyzeUnannotatedFunctions = true
strictParameterNoneValue = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true

# Report settings
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = false
reportUnusedClass = false
reportUnusedFunction = true
reportUnusedVariable = false
reportDuplicateImport = true
reportWildcardImportFromLibrary = true
reportOptionalSubscript = false
reportOptionalMemberAccess = false
reportOptionalCall = false
reportOptionalIterable = false
reportOptionalContextManager = false
reportOptionalOperand = false
reportGeneralTypeIssues = true
reportPropertyTypeMismatch = true
reportFunctionMemberAccess = true
reportPrivateUsage = false
reportConstantRedefinition = false
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true
reportOverlappingOverload = true
reportMissingSuperCall = false
reportUninitializedInstanceVariable = false
reportInvalidStringEscapeSequence = true
reportUnknownParameterType = "error"
reportUnknownArgumentType = "error" 
reportUnknownLambdaType = "error"
reportUnknownVariableType = "error"
reportUnknownMemberType = "error"
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportReturnType = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedClassDecorator = "error"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "error"
reportInvalidTypeVarUse = true
reportCallInDefaultInitializer = false
reportUnnecessaryIsInstance = false
reportUnnecessaryCast = false
reportUnnecessaryComparison = false
reportUnnecessaryContains = false
reportAssertAlwaysTrue = false
reportSelfClsParameterName = true
reportImplicitStringConcatenation = false
reportUndefinedVariable = true
reportUnboundVariable = true
reportInvalidStubStatement = true
reportIncompleteStub = true
reportUnsupportedDunderAll = true
reportUnusedCallResult = false
reportUnusedCoroutine = true
reportUnusedExpression = false
reportUnnecessaryTypeIgnoreComment = false
reportMatchNotExhaustive = true

# Display settings
verboseOutput = false
autoImportCompletions = false
indexing = false
functionSignatureDisplay = "compact"

[tool.pytest.ini_options]
markers = [
    "full: marks tests as requiring the full test suite (deselected during quick Python-only runs)",
    "serial: marks tests as requiring serial execution (no parallel execution)",
    "slow: marks tests as slow (can be skipped with -m 'not slow' for faster test runs)",
]

[[tool.pyright.executionEnvironments]]
root = "."
pythonVersion = "3.11"
pythonPlatform = "All"

[[tool.pyright.executionEnvironments]]
root = "ci/tests"
pythonVersion = "3.11"
pythonPlatform = "All"
# Enforce return type annotations even for test methods
reportReturnType = "error"
